--- a/docs/404.md
+++ b/docs/404.md
@@ -1,4 +1,8 @@
-# Not found
+# Lost in the clouds (404)
 
-The page you’re looking for doesn’t exist.  
-Return to the [home page](index.md) or use the search box above.
+Try the [homepage](index.md), search ↑, or jump to a category:
+- [🧭 Bias / Momentum](bias-momentum/index.md)
+- [💧 Participation](participation/index.md)
+- [🏗️ Structure / Levels](structure-levels/index.md)
+- [⏱️ Timing](timing/index.md)
+- [🧩 Meta / Tools](meta-tools/index.md)
